Enabling Java 17 support for splitting and embedding
This moves all the splitting/embedding tests into a new subproject that depends on Java 17.

The `flux-tests-api` subproject defines dependencies and helper classes needed by both the Java 11 and Java 17 tests.